crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_operation_oracle_result_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedOperationOracleResult;

fn main() {
    let _: UnvalidatedOperationOracleResult = serde_json::from_str("{}").unwrap();
}
